apps/churchlify/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churchlify-api
  namespace: churchlify
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: churchlify-api
  template:
    metadata:
      labels:
        app: churchlify-api
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: churchlify-api

      containers:
      - name: churchlify-api
        image: ghcr.io/churchlify/churchlify-api:latest
        ports:
        - containerPort: 3000

        # Load app-specific env vars
